samples/_failures_safe/1761632152_a5dea5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b2f2154.c:186:1: error: expected identifier or ‘(’ at end of input
  186 | int
      | ^~~
